<resources>
    <string name="app_name">Tron</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="Start">start</string>
    <string name="initial_value">0</string>
    <string name="play">Play</string>
    <string name="Settings">settings</string>
    <string name="difficulty">Difficulty:</string>
    <string name="clear">Clear Data</string>
    <string name="history">HISTORY</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="status">Status</string>
    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Normal</item>
        <item>Difficult</item>
    </string-array>
</resources>
