<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_dark">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorPrimaryDark"
        >

    </FrameLayout>
    <RelativeLayout
        android:id="@+id/game_controller_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/holo_blue_light"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"

        >
        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/start_button"
            android:layout_alignLeft="@+id/start_button"
            android:text="@string/initial_value"
            style="@style/TextAppearance.AppCompat.Display1" />

        <Button
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:onClick="start"
            android:id="@+id/start_button" />
        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_button"
            android:layout_alignLeft="@+id/start_button"
            android:text="@string/pause"
            android:onClick="pause"/>
        <ImageView
            android:id="@+id/up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/right_button"
            android:layout_toLeftOf="@+id/right_button"
            android:src="@drawable/up_arrow"
            android:onClick="changeDirection"/>
        <ImageView
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_arrow"
            android:onClick="changeDirection"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:id="@+id/down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/down_arrow"
            android:layout_below="@id/right_button"
            android:layout_toLeftOf="@+id/right_button"
            android:onClick="changeDirection"/>
        <ImageView
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_arrow"
            android:layout_centerVertical="true"
            android:layout_alignBaseline="@+id/right_button"
            android:layout_toLeftOf="@+id/up_button"
            android:onClick="changeDirection"
             />
    </RelativeLayout>


</LinearLayout>